# KNXyz

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-docs-pages.yml  publish-npm-first.yml  publish-npm.yml  publish-pypi.yml
bindings/node/: Cargo.toml  build.rs  index.d.ts  package-lock.json  package.json  tsconfig.types-smoke.json
bindings/node/scripts/: build-native.mjs
bindings/node/src/: index.ts  lib.rs
bindings/node/test/: dpt.test.ts  types-smoke.ts
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/knxyz/: __init__.py  capi.pxd  dpt.py
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_cython_consumption.py  test_dpt.py  test_dpt21_dpt22_bitset.py  test_dpt232_rgb.py  test_dpt251_rgbw_unsupported.py  test_dpt29_v64.py  test_dpt4_char.py
crates/knx-core/: Cargo.toml  README.md
crates/knx-core/src/: address.rs  apci.rs  cemi.rs  error.rs  knxnetip.rs  lib.rs
crates/knx-core/tests/: address.rs  cemi_group.rs  error.rs  knxnetip.rs  serde_roundtrip.rs
crates/knx-dpt/: Cargo.toml  README.md
crates/knx-dpt/src/: common.rs  dpt1.rs  dpt10.rs  dpt11.rs  dpt12.rs  dpt13.rs  dpt14.rs  dpt16.rs  dpt17.rs  dpt18.rs  dpt19.rs  dpt2.rs  dpt20.rs  dpt21.rs  dpt22.rs  dpt232.rs  dpt29.rs  dpt3.rs  dpt4.rs  dpt5.rs  dpt6.rs  dpt7.rs  dpt8.rs  dpt9.rs  error.rs  id.rs  lib.rs  macros.rs  value.rs
crates/knx-dpt/tests/: dispatch.rs  dpt13_energy_codec.rs  dpt21_dpt22_bitset.rs  dpt232_rgb.rs  dpt251_rgbw_unsupported.rs  dpt28_string_unsupported.rs  dpt29_v64.rs  dpt30_bitset_unsupported.rs  dpt4_char.rs  dpt9_signed_values.rs  dpt_characterization.rs  dpt_core_fixtures.rs  dpt_mvp.rs  dpt_properties.rs  int_codec_errors.rs  serde_roundtrip.rs  weather_dpt.rs
crates/knx-dpt/tests/fixtures/: dpt_core_fixtures.json
crates/knx-ip/: Cargo.toml  README.md
crates/knx-ip/src/: config.rs  discovery.rs  error.rs  heartbeat.rs  lib.rs  reconnect.rs  routing.rs  telegram.rs  transport.rs  tunnel.rs
crates/knx-ip/tests/: compatibility.rs  discovery.rs  routing.rs  routing_socket.rs  tunnel_sim.rs
crates/knx-sim/: Cargo.toml
crates/knx-sim/src/: frames.rs  gateway.rs  lib.rs  script.rs
crates/knx-sim/tests/: simulated_gateway.rs
crates/knxyz/: Cargo.toml  README.md
crates/knxyz/include/knxyz/: capi.h
crates/knxyz/scripts/: smoke-c-api.sh
crates/knxyz/src/: capi.rs  lib.rs
crates/knxyz/tests/: capi_smoke.c
docs/: architecture.md
examples/: README.md
examples/node/: dpt-codec.ts  group-read.ts  group-write.ts  offline-dpt.ts
examples/python/: dpt_codec.py  group_read.py  group_write.py  offline_dpt.py
examples/python/cython/: README.md  knxyz_cython_smoke.pyx  pyproject.toml  setup.py
examples/rust/: Cargo.toml  dpt_codec.rs  group_read.rs  group_write.rs  offline_dpt.rs
tools/package/: verify_publish_artifacts.py
website/: .gitignore  next.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json
website/app/: global.css  layout.config.tsx  layout.tsx  page.tsx
website/app/docs/[[...slug]]/: page.tsx
website/content/docs/: index.mdx  install.mdx  meta.json  releases.mdx
website/content/docs/examples/: dpt-codec.mdx  group-read.mdx  group-write.mdx  index.mdx  meta.json
website/content/docs/quickstart/: datapoint-codec.mdx  knxnet-ip.mdx  meta.json
website/content/docs/reference/: c-abi.mdx  cython.mdx  dpt-codecs.mdx  knxnet-ip.mdx  meta.json  node.mdx  python.mdx  rust.mdx
website/public/: CNAME
