[package]
name = "knxyz-node"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
knx-core = { path = "../../crates/knx-core" }
knx-dpt = { path = "../../crates/knx-dpt" }
knx-ip = { path = "../../crates/knx-ip" }
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
serde = { workspace = true, features = ["std"] }
serde_json = "1"
tokio.workspace = true
