[package]
name = "knxyz-python"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
knx-core = { path = "../../crates/knx-core" }
knx-dpt = { path = "../../crates/knx-dpt" }
knx-ip = { path = "../../crates/knx-ip" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { workspace = true, features = ["std"] }
serde_json = "1"
tokio.workspace = true
tokio-stream.workspace = true
