[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "knxyz"
version = "0.0.3"
description = "KNX datapoint codecs and KNXnet/IP client bindings for Python."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "goznauk", email = "goznauk@naver.com" }]

[project.urls]
Homepage = "https://knxyz.io"
Issues = "https://github.com/goznauk/KNXyz/issues"
Repository = "https://github.com/goznauk/KNXyz"

[tool.maturin]
# knxyz is the real package; the native module is knxyz._knxyz. The pure-python
# package ships from this source root. The Python sdist boundary is enforced by
# the Cargo package include/exclude policy plus tools/package verification.
module-name = "knxyz._knxyz"
python-source = "."
include = [
  "knxyz/**/*.py",
  "knxyz/**/*.pxd",
  "knxyz/include/**/*.h",
  "knxyz/py.typed",
]
