[package]
name = "knx-dpt"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "KNX datapoint type (DPT) encoding and decoding."
keywords = ["knx", "dpt", "datapoint", "encoding", "home-automation"]
categories = ["encoding", "parser-implementations"]
exclude = ["tests/**"]

[features]
default = ["std"]
std = []
# `serde/alloc` is required so derived Serialize/Deserialize cover the
# allocation-backed values (e.g. `DptValue::Text14(String)`). `alloc`
# (not `std`) keeps the crate's no_std+alloc trajectory intact, matching
# the knx-core serde fix.
serde = ["dep:serde", "serde/alloc"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = "1"
