[package]
name = "knx-ip"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "KNXnet/IP client: tunnelling, routing, and discovery."
keywords = ["knx", "knxnet-ip", "tunneling", "routing", "home-automation"]
categories = ["network-programming"]
exclude = ["tests/**"]

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
serde = ["dep:serde", "knx-core/serde", "knx-dpt/serde"]

[dependencies]
futures-core.workspace = true
# path for local builds; version for crates.io packaging (both must be published
# before knx-ip).
knx-core = { path = "../knx-core", version = "0.0.2" }
knx-dpt = { path = "../knx-dpt", version = "0.0.2" }
serde = { workspace = true, optional = true }
socket2 = "0.6"
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-stream.workspace = true

[dev-dependencies]
knx-sim = { path = "../knx-sim" }
