[package]
name = "knxyz"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "KNXyz - a KNX library for Rust, Python, and Node.js (primary public facade over the KNX DPT codec and KNXnet/IP client)."
keywords = ["knx", "knxnet-ip", "dpt", "home-automation", "building-automation"]
categories = ["network-programming", "encoding"]

[dependencies]
# path is used for local/workspace builds; version is required for crates.io
# packaging (these crates must be published before knxyz).
knx-core = { path = "../knx-core", version = "0.0.2" }
knx-dpt = { path = "../knx-dpt", version = "0.0.2" }
knx-ip = { path = "../knx-ip", version = "0.0.2" }
