[package]
name = "knxyz-rust-examples"
version = "0.0.3"
edition = "2021"
publish = false

[workspace]

[dependencies]
knxyz = { path = "../../crates/knxyz" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "dpt-codec"
path = "dpt_codec.rs"

[[bin]]
name = "group-read"
path = "group_read.rs"

[[bin]]
name = "group-write"
path = "group_write.rs"
